--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,8 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/moviedb
-JWT_SECRET=your_jwt_secret_key_here
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/moviedb?retryWrites=true&w=majority
+JWT_SECRET=your_strong_secret_key_here_change_this
 JWT_EXPIRE=7d
 REDIS_HOST=localhost
 REDIS_PORT=6379
-NODE_ENV=development
+NODE_ENV=production
+FRONTEND_URL=https://your-frontend-url.vercel.app
